--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "mongodb": "^3.6.6",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7"
   },
